--- a/api/rest_api.yml
+++ b/api/rest_api.yml
@@ -1014,9 +1014,7 @@ paths:
                   follower_ids:
                     items:
                       type: string
-                      properties:
-                        type: string
-                        description: author id
+                    type: array
                   totalCount:
                     type: integer
                   totalPages:
@@ -1049,10 +1047,7 @@ paths:
                 follower_ids:
                   items:
                     type: string
-                    properties:
-                      author_id:
-                        type: string
-                        description: author id
+                  type: array
               required:
                 - updated_at
       responses:
@@ -1066,9 +1061,7 @@ paths:
                   follower_ids:
                     items:
                       type: string
-                      properties:
-                        type: string
-                        description: follower id
+                    type: array
         400:
           description: Bad Request
         404:
